# gba_emu

./: .gitignore  Cargo.toml  README.md  acknowledgements.txt  performance_ideas.md
arm7tdmi_da/: Cargo.toml
arm7tdmi_da/src/: decode_arm.rs  main.rs
armv4t_da/src/: decode_arm.rs  decode_thumb.rs
armv4t_decoder/: Cargo.toml  instruction_list.md
armv4t_decoder/disasm_tools/: .gitignore  Makefile  add.S  da.sh  da.txt  test  test.S
armv4t_decoder/src/: arm.rs  common.rs  decode_arm.rs  decode_thumb.rs  lib.rs  main.rs  thumb.rs
core/: Cargo.toml
core/src/: alu.rs  cartridge.rs  cpu.rs  instruction.rs  instruction_decoder.rs  main.rs  memory.rs  registers.rs
emu_core/: Cargo.toml
emu_core/src/: alu.rs  bios.rs  bus.rs  cartridge.rs  cpu.rs  cycles.rs  display.rs  emulator.rs  instruction.rs  main.rs  memcontroller.rs  memory.rs  mmio.rs  ram.rs  registers.rs  renderer.rs
render/: Cargo.toml
render/src/: consts.rs  main.rs  screen.rs
tests/: Cargo.toml
