[package]
name = "emu_core"
version = "0.1.0"
edition = "2021"


[dependencies]
modular-bitfield = "0.11.2"
rangemap = "1.0.1"
bitvec = "1.0.0"
byteorder = "1.4.3"
env_logger = "0.9.0"
log = { version = "0.4.17", features = ["release_max_level_warn"] }
armv4t_decoder = { path = "../armv4t_decoder" }